--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1096,6 +1096,9 @@ a {
 .cid-tjQtOY2dmz .mbr-section-btn {
   color: #ffffff;
 }
+.cid-tjQtOY2dmz .mbr-section-title {
+  color: #ffffff;
+}
 .cid-twNzMpeojb {
   padding-top: 6rem;
   padding-bottom: 4rem;
@@ -1400,26 +1403,6 @@ a {
 .cid-twNJ6DErcf .counter-container ul li {
   padding-left: 1rem;
   margin-bottom: 1rem;
-  list-style: none;
-  position: relative;
-}
-.cid-twNJ6DErcf .counter-container ul li:before {
-  position: absolute;
-  left: -40px;
-  content: '';
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ffffff;
-  background-color: #6592e6;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin-top: 5px;
-  background: none;
-  border: 1px solid #6592e6;
-  color: #6592e6;
-  content: '✓';
 }
 .cid-twNJ6DErcf .mbr-section-title {
   text-align: center;
